Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -42,34 +42,51 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/dolfin/minivmac4android">Mini vMac 4 Android</a>
+    <h1><a href="http://github.com/dolfin/minivmac4android">Mini vMac for Android</a>
       <span class="small">by <a href="http://github.com/dolfin">dolfin</a></span></h1>
 
     <div class="description">
       Mini vMac port for Android
     </div>
 
-    <p>This is a port of the Mini vMac emulator for the Android platform. It supports almost any Android device, starting from android version 1.5.
-It is based on a port by Jesús A. Álvarez who also made the iPhone port of Mini vMac.</p><h2>Install</h2>
+    <p>This is a port of the Mini vMac emulator for the Android platform. It supports almost any Android device, starting from android version 1.5.</p>
+<p>It is based on a port by Jesús A. Álvarez who also made the iPhone port of Mini vMac.</p>
+<h2>Features</h2>
+<ul>
+<li>4MB Mac Plus</li>
+<li>Full screen (scaled down if needed) or scrolling if needed (full size)</li>
+<li>Full simulated keyboard (including all Mac keys) and physical keyboard support</li>
+<li>Sound</li>
+</ul>
+<h2>Requirements</h2>
+<ul>
+<li>Android device (version 1.5 or more)</li>
+<li><a href="http://minivmac.sourceforge.net/doc/start.html">Mac Plus ROM image</a></li>
+<li>Disk images with Mac software</li>
+</ul>
+<h2>Install</h2>
 <p>To install Mini vMac, download the apk file and open it on your device.</p>
 <h2>License</h2>
 <p>This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2 of the License, or
-(at your option) any later version.
+(at your option) any later version.</p>
 
-This program is distributed in the hope that it will be useful,
+<p>This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
+GNU General Public License for more details.</p>
 
-You should have received a copy of the GNU General Public License
+<p>You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA</p>
 <h2>Authors</h2>
-<p>Gil Osher (gilosher@gmail.com)<br/>Jesús A. Álvarez (maczydeco@gmail.com)<br/>      </p>
+<p>Gil Osher (<a href="matilto:gilosher@gmail.com">gilosher@gmail.com</a>)
+<br/>Jesús A. Álvarez (<a href="matilto:maczydeco@gmail.com">maczydeco@gmail.com</a>)
+<br/>      </p>
 <h2>Contact</h2>
-<p>Gil Osher (gilosher@gmail.com)<br/>      </p>
+<p>Gil Osher (<a href="matilto:gilosher@gmail.com">gilosher@gmail.com</a>)
+<br/>      </p>
 
 
     <h2>Download</h2>
