Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -61,11 +61,30 @@
 <h2>Requirements</h2>
 <ul>
 <li>Android device (version 1.5 or more)</li>
+<li>SD Card</li>
 <li><a href="http://minivmac.sourceforge.net/doc/start.html">Mac Plus ROM image</a></li>
 <li>Disk images with Mac software</li>
 </ul>
 <h2>Install</h2>
 <p>To install Mini vMac, download the apk file and open it on your device.</p>
+
+<h2>Usage</h2>
+<h3>Rom Installation</h3>
+<p>The ROM file must be named <code>vMac.ROM</code> and placed in <code>minivmac</code> directory
+in your SD Card.</p>
+<h3>Disk Images</h3>
+<p>Disk images should have <code>.img</code> or <code>.dsk</code> extensions, and be located in<code>minivmac</code> directory
+in your SD Card for them to show up in the disk chooser.</p>
+<p>To insert disk images, click the <b>Menu</b> button and choose <b>Insert Disk</b> and the list of disks will appear.</p>
+<h3>Keyboard</h3>
+<p>Click the <b>Menu</b> button and choose <b>Keyboard</b> to show or hide the keyboard.</p>
+<p>The emulated keyboard features all the keys on the Mac Plus keyboard, except the keypad. The Command, Option and Shift keys are sticky. If your device have a physical keyboard you can use it as well.</p>
+<h3>Mouse</h3>
+<p>Use the screen as a touchscreen, where tapping anything sends a mouse click.</p>
+<h3>Screen</h3>
+<p>You can toggle between full screen (if you have a device with low resolution the Mac screen will be scaled down to fit your screen) or full size (the Mac screen is shown at its real size) by clicking the <b>Select</b> button. In full size mode, you can scroll by using the arrows.</p>
+<h3>Suspend</h3>
+<p>If you press the home button while the emulated Mac has disks inserted, Mini vMac will pause but stay open. To quit Mini vMac properly, eject all disks before pressing home. Note that when Mini vMac is suspended, it still uses memory and could be forced to quit if the memory is low.</p>
 <h2>License</h2>
 <p>This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -75,7 +94,7 @@ the Free Software Foundation; either version 2 of the License, or
 <p>This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.</p>
+<a href="http://www.gnu.org/licenses/#GPL">GNU General Public License</a> for more details.</p>
 
 <p>You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
