Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <p>The ROM file must be named <code>vMac.ROM</code> and placed in <code>minivmac</code> directory
 in your SD Card.</p>
 <h3>Disk Images</h3>
-<p>Disk images should have <code>.img</code> or <code>.dsk</code> extensions, and be located in<code>minivmac</code> directory
+<p>Disk images should have <code>.img</code> or <code>.dsk</code> extensions, and be located in <code>minivmac</code> directory
 in your SD Card for them to show up in the disk chooser.</p>
 <p>To insert disk images, click the <b>Menu</b> button and choose <b>Insert Disk</b> and the list of disks will appear.</p>
 <h3>Keyboard</h3>
@@ -108,9 +108,16 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA</p>
 <br/>      </p>
 
 
-    <h2>Download</h2>
+    <h2>Development</h2>
     <p>
-      You can download this project in either
+     <ul>
+      <li>Mini vMac for Android is based on Mini vMac 3.1.3 by Paul C. Pratt.</li>
+      <li>Mini vMac for Android is written and built using <a href="http://developer.android.com/sdk/index.html">Android SDK</a>, <a href="http://developer.android.com/sdk/ndk/index.html">Android NDK</a> and <a href="http://www.eclipse.org/"Eclipse</a>.</li>
+      <li><a href="http://minivmac.sourceforge.net/">Mini vMac main page</a></li>
+     </ul>
+    </p>
+    <p>
+      You can download this project source in either
       <a href="http://github.com/dolfin/minivmac4android/zipball/master">zip</a> or
       <a href="http://github.com/dolfin/minivmac4android/tarball/master">tar</a> formats.
     </p>
