Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA</p>
     <p>
      <ul>
       <li>Mini vMac for Android is based on Mini vMac 3.1.3 by Paul C. Pratt.</li>
-      <li>Mini vMac for Android is written and built using <a href="http://developer.android.com/sdk/index.html">Android SDK</a>, <a href="http://developer.android.com/sdk/ndk/index.html">Android NDK</a> and <a href="http://www.eclipse.org/"Eclipse</a>.</li>
+      <li>Mini vMac for Android is written and built using <a href="http://developer.android.com/sdk/index.html">Android SDK</a>, <a href="http://developer.android.com/sdk/ndk/index.html">Android NDK</a> and <a href="http://www.eclipse.org/">Eclipse</a>.</li>
       <li><a href="http://minivmac.sourceforge.net/">Mini vMac main page</a></li>
      </ul>
     </p>
