--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <li>Disk images with Mac software</li>
 </ul>
 <h2>Install</h2>
-<p>To install Mini vMac, download the apk file and open it on your device.</p>
+<p>To install Mini vMac, <a href="http://github.com/dolfin/minivmac4android/MiniVMac.apk">download the apk file</a> and open it on your device. Or <a href="https://github.com/dolfin/minivmac4android/MiniVMac.apk/qr_code">grab this barcode</a> with your camera.</p>
 
 <h2>Usage</h2>
 <h3>Rom Installation</h3>
