Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/dolfin/minivmac4android/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/dolfin/minivmac4android/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+      <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac.apk">
+        <img border="0" width="300" src="https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl=https://github.com/downloads/dolfin/minivmac4android/MiniVMac.apk"></a>
     </div>
 
     <h1><a href="http://github.com/dolfin/minivmac4android">Mini vMac for Android</a>
