Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@ in your SD Card for them to show up in the disk chooser.</p>
 <p>You can toggle between full screen (if you have a device with low resolution the Mac screen will be scaled down to fit your screen) or full size (the Mac screen is shown at its real size) by clicking the <b>Select</b> button. In full size mode, you can scroll by using the arrows.</p>
 <h3>Suspend</h3>
 <p>If you press the home button while the emulated Mac has disks inserted, Mini vMac will pause but stay open. To quit Mini vMac properly, eject all disks before pressing home. Note that when Mini vMac is suspended, it still uses memory and could be forced to quit if the memory is low.</p>
+
+<h2>Change Log</h2>
+<p><b>1.0.1</b>
+<ul>
+<li>Fixed screen resolution for Samsung Galaxy Tab devices. (Thanks for Matthias von Davier)
+</ul>
+</p>
+<p><b>1.0.0</b>
+<ul>
+<li>Initial Release
+</ul>
+</p>
 <h2>License</h2>
 <p>This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
