Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@ in your SD Card for them to show up in the disk chooser.</p>
 <p>If you press the home button while the emulated Mac has disks inserted, Mini vMac will pause but stay open. To quit Mini vMac properly, eject all disks before pressing home. Note that when Mini vMac is suspended, it still uses memory and could be forced to quit if the memory is low.</p>
 
 <h2>Change Log</h2>
+<p><b>1.0.2</b>
+<ul>
+<li>Fixed screen resolution for Motorola XOOM. (Thanks for Ethan Piliavin
+<li>Added scale button to the menu
+</ul>
+</p>
 <p><b>1.0.1</b>
 <ul>
 <li>Fixed screen resolution for Samsung Galaxy Tab devices. (Thanks for Matthias von Davier)
