Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ in your SD Card for them to show up in the disk chooser.</p>
 <h2>Change Log</h2>
 <p><b>1.0.2</b>
 <ul>
-<li>Fixed screen resolution for Motorola XOOM. (Thanks for Ethan Piliavin
-<li>Added scale button to the menu
+<li>Fixed screen resolution for Motorola XOOM. (Thanks for Ethan Piliavin)
+<li>Added scale screen button to the menu
 </ul>
 </p>
 <p><b>1.0.1</b>
