--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
 <li>Disk images with Mac software</li>
 </ul>
 <h2>Install</h2>
-<p>To install Mini vMac, <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_2.apk">download the apk file</a> and open it on your device. Or <a href="https://github.com/dolfin/minivmac4android/MiniVMac_1_0_2.apk/qr_code">grab this barcode</a> with your camera.</p>
+<p><a href="http://market.android.com/details?id=name.osher.gil.minivmac">
+  <img src="http://www.android.com/images/brand/60_avail_market_logo2.png"
+       alt="Available in Android Market" />
+</a></p>
+<p>Alternatively, You can <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_2.apk">download the apk file</a> and open it on your device. Or <a href="https://github.com/dolfin/minivmac4android/MiniVMac_1_0_2.apk/qr_code">grab this barcode</a> with your camera.</p>
 
 <h2>Usage</h2>
 <h3>Rom Installation</h3>
