Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <div id="container">
 
     <div class="download">
-      <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_2.apk">
-        <img border="0" width="150" src="https://chart.googleapis.com/chart?cht=qr&chs=150x150&chl=https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_2.apk"></a>
+      <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_3.apk">
+        <img border="0" width="150" src="https://chart.googleapis.com/chart?cht=qr&chs=150x150&chl=https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_3.apk"></a>
     </div>
 
     <h1><a href="http://github.com/dolfin/minivmac4android">Mini vMac for Android</a>
@@ -68,7 +68,7 @@
   <img src="http://www.android.com/images/brand/60_avail_market_logo2.png"
        alt="Available in Android Market" />
 </a></p>
-<p>Alternatively, You can <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_2.apk">download the apk file</a> and open it on your device. Or <a href="https://github.com/dolfin/minivmac4android/MiniVMac_1_0_2.apk/qr_code">grab this barcode</a> with your camera.</p>
+<p>Alternatively, You can <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_3.apk">download the apk file</a> and open it on your device. Or <a href="https://github.com/dolfin/minivmac4android/MiniVMac_1_0_3.apk/qr_code">grab this barcode</a> with your camera.</p>
 
 <h2>Usage</h2>
 <h3>Rom Installation</h3>
@@ -89,6 +89,11 @@ in your SD Card for them to show up in the disk chooser.</p>
 <p>If you press the home button while the emulated Mac has disks inserted, Mini vMac will pause but stay open. To quit Mini vMac properly, eject all disks before pressing home. Note that when Mini vMac is suspended, it still uses memory and could be forced to quit if the memory is low.</p>
 
 <h2>Change Log</h2>
+<p><b>1.0.3</b>
+<ul>
+<li>Fixed pointer issue on scaled screens.
+</ul>
+</p>
 <p><b>1.0.2</b>
 <ul>
 <li>Fixed screen resolution for Motorola XOOM. (Thanks for Ethan Piliavin)
