Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@ in your SD Card for them to show up in the disk chooser.</p>
 <h3>Suspend</h3>
 <p>If you press the home button while the emulated Mac has disks inserted, Mini vMac will pause but stay open. To quit Mini vMac properly, eject all disks before pressing home. Note that when Mini vMac is suspended, it still uses memory and could be forced to quit if the memory is low.</p>
 
+<h2>Screenshots</h2>
+<p><img src="screenshot1.png"></p>
+<p><img src="screenshot2.png"></p>
+<p><img src="screenshot3.png"></p>
+<p><img src="screenshot4.png"></p>
+
 <h2>Change Log</h2>
 <p><b>1.0.3</b>
 <ul>
