--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <div id="container">
 
     <div class="download">
-      <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_3.apk">
-        <img border="0" width="150" src="https://chart.googleapis.com/chart?cht=qr&chs=150x150&chl=https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_3.apk"></a>
+      <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_1_0.apk">
+        <img border="0" width="150" src="https://chart.googleapis.com/chart?cht=qr&chs=150x150&chl=https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_1_0.apk"></a>
     </div>
 
     <h1><a href="http://github.com/dolfin/minivmac4android">Mini vMac for Android</a>
@@ -64,11 +64,11 @@
 <li>Disk images with Mac software</li>
 </ul>
 <h2>Install</h2>
-<p><a href="http://market.android.com/details?id=name.osher.gil.minivmac">
-  <img src="http://www.android.com/images/brand/60_avail_market_logo2.png"
-       alt="Available in Android Market" />
+<p><a href="http://play.google.com/store/apps/details?id=name.osher.gil.minivmac">
+  <img alt="Get it on Google Play"
+       src="http://www.android.com/images/brand/get_it_on_play_logo_large.png" />
 </a></p>
-<p>Alternatively, You can <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_0_3.apk">download the apk file</a> and open it on your device. Or <a href="https://github.com/dolfin/minivmac4android/MiniVMac_1_0_3.apk/qr_code">grab this barcode</a> with your camera.</p>
+<p>Alternatively, You can <a href="https://github.com/downloads/dolfin/minivmac4android/MiniVMac_1_1_0.apk">download the apk file</a> and open it on your device. Or <a href="https://github.com/dolfin/minivmac4android/MiniVMac_1_1_0.apk/qr_code">grab this barcode</a> with your camera.</p>
 
 <h2>Usage</h2>
 <h3>Rom Installation</h3>
@@ -95,6 +95,12 @@ in your SD Card for them to show up in the disk chooser.</p>
 <p><a href="screenshot4.png"><img src="screenshot4.png" width="533" height="320"></a></p>
 
 <h2>Change Log</h2>
+<p><b>1.1.0</b>
+<ul>
+<li>The emulator is now based on version 3.2.3 of Mini vMac.
+<li>Added the ability to add new disk images.
+</ul>
+</p>
 <p><b>1.0.3</b>
 <ul>
 <li>Fixed pointer issue on scaled screens.
@@ -142,7 +148,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA</p>
     <h2>Development</h2>
     <p>
      <ul>
-      <li>Mini vMac for Android is based on Mini vMac 3.1.3 by Paul C. Pratt.</li>
+      <li>Mini vMac for Android is based on Mini vMac 3.2.3 by Paul C. Pratt.</li>
       <li>Mini vMac for Android is written and built using <a href="http://developer.android.com/sdk/index.html">Android SDK</a>, <a href="http://developer.android.com/sdk/ndk/index.html">Android NDK</a> and <a href="http://www.eclipse.org/">Eclipse</a>.</li>
       <li><a href="http://minivmac.sourceforge.net/">Mini vMac main page</a></li>
      </ul>
